Fix issues with production and test configurations
Fix typo in additional-spring-configuration-metadata.json
Rename test.properties to application properties to fix
 issues with metadata (must reside inside resources of test)
Add missing @TestPropertySource to WebprakApplicationTests

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -3,7 +3,7 @@
     {
       "name": "db_url",
       "type": "java.lang.String",
-      "description": "Url of database (fully qualified in format jdbc:postgresql://<url>."
+      "description": "Url of database (fully qualified in format jdbc:postgresql://<url>)."
     },
     {
       "name": "db_username",
