--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'org.postgresql:postgresql:42.3.2'
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'org.hibernate:hibernate-core:5.6.5.Final'
+    testImplementation("org.assertj:assertj-core:3.22.0")
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
     testImplementation 'org.postgresql:postgresql:42.3.2'
