Exclude entities from jacoco report

--- a/build.gradle
+++ b/build.gradle
@@ -47,4 +47,10 @@ dependencies {
 
 jacocoTestReport {
     dependsOn test
+
+    classDirectories.setFrom(files(classDirectories.files.collect {
+        fileTree(dir: it, exclude: [
+                "ru/notlebedev/webprak/model/entity/*"
+        ])
+    }))
 }
