--- a/build.gradle
+++ b/build.gradle
@@ -53,4 +53,14 @@ jacocoTestReport {
                 "ru/notlebedev/webprak/model/entity/*"
         ])
     }))
+
+    reports {
+        xml.required = false
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('resources/main/static/reports/jacoco')
+    }
+}
+
+test {
+    reports.html.outputLocation = layout.buildDirectory.dir('resources/main/static/reports/junit')
 }
