--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,9 @@ test {
 }
 
 task stage {
+    dependsOn clean
+    dependsOn build
     dependsOn jacocoTestReport
-    dependsOn bootRun
-    bootRun.mustRunAfter(jacocoTestReport)
+    build.mustRunAfter clean
+    jacocoTestReport.mustRunAfter clean
 }
