--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ repositories {
 dependencies {
     implementation 'org.springframework:spring-orm:5.3.15'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.projectlombok:lombok:1.18.22'
     compileOnly 'org.projectlombok:lombok'
     implementation 'org.postgresql:postgresql:42.3.2'
@@ -35,6 +36,8 @@ dependencies {
     implementation 'org.hibernate:hibernate-core:5.6.5.Final'
     testImplementation("org.assertj:assertj-core:3.22.0")
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+    implementation 'org.thymeleaf:thymeleaf:3.1.0.M1'
+    implementation 'org.thymeleaf:thymeleaf-spring5:3.1.0.M1'
 
     testImplementation 'org.postgresql:postgresql:42.3.2'
     testImplementation 'org.hibernate:hibernate-core:5.6.5.Final'
