Add thymeleaf template caching configuration

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -19,5 +19,11 @@
       "name": "db_schema",
       "type": "java.lang.String",
       "description": "Database schema to use."
+    },
+    {
+      "name": "thymeleaf_no_cache",
+      "type": "java.lang.Boolean",
+      "description": "Disable Thymeleaf template caching.",
+      "defaultValue": "false"
     }
   ] }
