--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,11 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.seleniumhq.selenium:selenium-java:4.1.3'
+    testImplementation 'org.seleniumhq.selenium:selenium-remote-driver:4.1.3'
+    testImplementation 'org.seleniumhq.selenium:selenium-chrome-driver:4.1.3'
+    testImplementation 'org.seleniumhq.selenium:selenium-firefox-driver:4.1.3'
+    testImplementation 'org.seleniumhq.selenium:selenium-api:4.1.3'
 }
 
 jacocoTestReport {
